--- a/public/events-edit/index.html
+++ b/public/events-edit/index.html
@@ -95,7 +95,8 @@ body.dark-theme .badge {
       text-transform: uppercase;
     }
     nav a {
-      color: var(--white);
+      color: #1f4e79;
+      font-weight: bold;
       text-decoration: none;
       padding: 6px 10px;
       border-radius: var(--radius-pill);
