--- a/public/calendar/index.html
+++ b/public/calendar/index.html
@@ -346,6 +346,7 @@ body.dark-theme .badge {
       <a href="/spl-blog">SPL Blog</a>
       <a href="/useful-links">Useful Links</a>
       <a href="/events">Events</a>
+      <a href="/mail">Mail</a>
     </nav>
 
     <div id="auth-bar">
