--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -294,6 +294,7 @@
       <a href="/spl-blog">SPL Blog</a>
       <a href="/useful-links">Useful Links</a>
       <a href="/events">Events</a>
+      <a href="/mail">Mail</a>
     </nav>
     <div id="auth-bar">
       <div id="auth-info">Signed in as …</div>
