--- a/public/events-edit/index.html
+++ b/public/events-edit/index.html
@@ -268,12 +268,13 @@ body.dark-theme .badge {
     </div>
     <nav>
       <a href="/home">Home</a>
-      <a href="/events">Events</a>
       <a href="/calendar">Calendar</a>
       <a href="/documents">Documents</a>
       <a href="/scoutmaster">Scoutmaster Blog</a>
       <a href="/spl">SPL Blog</a>
       <a href="/useful-links">Useful Links</a>
+      <a href="/events">Events</a>
+      <a href="/mail">Mail</a>
     </nav>
     <div id="auth-bar">
       <button id="theme-toggle" type="button">🌞 Light mode</button>
