--- a/public/scoutmaster/index.html
+++ b/public/scoutmaster/index.html
@@ -306,6 +306,7 @@ body.dark-theme .badge {
       <a href="/spl">SPL Blog</a>
       <a href="/useful-links">Useful Links</a>
       <a href="/events">Events</a>
+      <a href="/mail">Mail</a>
     </nav>
     <div id="auth-bar">
       <button id="theme-toggle" type="button">🌞 Light mode</button>
