--- a/public/useful-links/index.html
+++ b/public/useful-links/index.html
@@ -356,6 +356,7 @@
       <a href="/spl">SPL Blog</a>
       <a href="/useful-links">Useful Links</a>
       <a href="/events">Events</a>
+      <a href="/mail">Mail</a>
     </nav>
 
     <div id="auth-bar">
