--- a/public/index.html
+++ b/public/index.html
@@ -242,6 +242,7 @@
       <a href="/spl-blog">SPL Blog</a>
       <a href="/useful-links">Useful Links</a>
       <a href="/events">Events</a>
+      <a href="/mail">Mail</a>
     </nav>
 
     <div id="auth-bar">
