--- a/public/index.html
+++ b/public/index.html
@@ -334,6 +334,16 @@
             </p>
           </div>
         </a>
+
+        <a href="/mail" class="feature-card-link">
+          <div class="feature-card">
+            <div class="feature-badge">Contact</div>
+            <h3 class="feature-title">Mail</h3>
+            <p class="feature-text">
+              Reach out to other members of the troop.
+            </p>
+          </div>
+        </a>
       </div>
 
       <div class="quick-note">
