--- a/public/home/index.html
+++ b/public/home/index.html
@@ -361,6 +361,15 @@
           </div>
         </a>
 
+        <a href="/mail" class="feature-card-link">
+          <div class="feature-card">
+            <div class="feature-badge">Contact</div>
+            <h3 class="feature-title">Mail</h3>
+            <p class="feature-text">
+              Reach out to other members of the troop.
+            </p>
+          </div>
+        </a>
       </div>
 
       <div class="quick-note">
