--- a/public/home/index.html
+++ b/public/home/index.html
@@ -370,6 +370,16 @@
             </p>
           </div>
         </a>
+
+        <a href="/report" class="feature-card-link">
+          <div class="feature-card">
+            <div class="feature-badge">Report</div>
+            <h3 class="feature-title">Report</h3>
+            <p class="feature-text">
+              Report any problems/suggestions for the website to the devs.
+            </p>
+          </div>
+        </a>
       </div>
 
       <div class="quick-note">
