--- a/public/calendar/index.html
+++ b/public/calendar/index.html
@@ -360,7 +360,7 @@ body.dark-theme .badge {
     <div class="welcome-card">
       <div>
         <h3>Troop Calendar</h3>
-        <p>Upcoming meetings, campouts, and events for Troop 248.</p>
+        <p>Upcoming meetings, campouts, and events for Troop 248. Note: This only displays scoutbook updated events</p>
       </div>
       <div id="role-badge-container">
         <span class="badge">Viewer</span>
