--- a/public/index.html
+++ b/public/index.html
@@ -340,6 +340,16 @@
             <div class="feature-badge">Contact</div>
             <h3 class="feature-title">Mail</h3>
             <p class="feature-text">
+              Report any problems/suggestions for the website to the devs.
+            </p>
+          </div>
+        </a>
+
+        <a href="/report" class="feature-card-link">
+          <div class="feature-card">
+            <div class="feature-badge">Report</div>
+            <h3 class="feature-title">Report</h3>
+            <p class="feature-text">
               Reach out to other members of the troop.
             </p>
           </div>
