--- a/public/report/index.html
+++ b/public/report/index.html
@@ -262,7 +262,7 @@
       <a href="/home">Home</a>
       <a href="/calendar">Calendar</a>
       <a href="/documents">Documents</a>
-      <a href="/scoutmaster">Scoutmaster Blog</a>
+      <a href="/scoutmaster">SM Blog</a>
       <a href="/spl-blog">SPL Blog</a>
       <a href="/useful-links">Useful Links</a>
       <a href="/events">Events</a>
