--- a/public/spl/index.html
+++ b/public/spl/index.html
@@ -302,7 +302,7 @@ body.dark-theme .badge {
       <a href="/home">Home</a>
       <a href="/calendar">Calendar</a>
       <a href="/documents">Documents</a>
-      <a href="/scoutmaster">Scoutmaster Blog</a>
+      <a href="/scoutmaster">SM Blog</a>
       <a href="/spl">SPL Blog</a>
       <a href="/useful-links">Useful Links</a>
       <a href="/events">Events</a>
