--- a/public/index.html
+++ b/public/index.html
@@ -238,7 +238,7 @@
     <nav>
       <a href="/calendar">Calendar</a>
       <a href="/documents">Documents</a>
-      <a href="/scoutmaster">Scoutmaster Blog</a>
+      <a href="/scoutmaster">SM Blog</a>
       <a href="/spl-blog">SPL Blog</a>
       <a href="/useful-links">Useful Links</a>
       <a href="/events">Events</a>
