--- a/public/under-review/index.html
+++ b/public/under-review/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Account Under Review — Troop 248</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/png" href="/bsafavicon.ico">
   <style>
     :root {
       --blue: #1f4e79;
