--- a/public/mail/index.html
+++ b/public/mail/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Mail — Troop 248</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="icon" type="image/png" href="/bsafavicon.ico">
 
   <style>
     :root {
