--- a/public/events-edit/index.html
+++ b/public/events-edit/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Edit Event — Troop 248</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/png" href="/bsafavicon.ico">
   <style>
     :root {
       --red: #b22222;
