--- a/public/home/index.html
+++ b/public/home/index.html
@@ -317,7 +317,7 @@
             <div class="feature-badge">Forms</div>
             <h3 class="feature-title">Troop Documents</h3>
             <p class="feature-text">
-              Find permission slips, packing lists, medical forms, and other important paperwork.
+              Find meeting plans, packing lists, medical forms, and other important paperwork.
             </p>
           </div>
         </a>
