--- a/public/calendar/index.html
+++ b/public/calendar/index.html
@@ -363,7 +363,7 @@ body.dark-theme .badge {
       <a href="/calendar">Calendar</a>
       <a href="/documents">Documents</a>
       <a href="/scoutmaster">SM Blog</a>
-      <a href="/spl-blog">SPL Blog</a>
+      <a href="/spl">SPL Blog</a>
       <a href="/useful-links">Useful Links</a>
       <a href="/events">Events</a>
       <a href="/mail">Mail</a>
