--- a/public/index.html
+++ b/public/index.html
@@ -225,6 +225,22 @@
       .welcome-card { flex-direction: column; align-items: flex-start; }
       #auth-bar { flex-wrap: wrap; }
     }
+    .big-login-btn {
+  display: inline-block;
+  background: #b22222;
+  color: white;
+  padding: 16px 34px;
+  border-radius: 999px;
+  font-size: 20px;
+  font-weight: 800;
+  text-decoration: none;
+  box-shadow: 0 8px 18px rgba(0,0,0,0.2);
+}
+
+.big-login-btn:hover {
+  opacity: 0.9;
+}
+
   </style>
 </head>
 
@@ -261,8 +277,8 @@
           Please log in to access member resources.
         </p>
         <p style="margin-top:10px;">
-          <a href="/login/" style="font-weight:700; color: var(--blue); text-decoration: underline;">
-            Go to Login →
+          <a href="/login/" class="big-login-btn">
+            Log In / Sign Up
           </a>
         </p>
       </div>
